[package]
name = "ptgrep"
version = "1.0.0"
authors = ["Михаил Красильников <m.krasilnikov@yandex.ru>"]

[dependencies]
clap = {version = "2.0", features = ["yaml"]}
exitcode = "1.1.2"
lazy_static = "1.1.*"
regex = "1.0.*"
thread_local = "0.2.*"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
